OpenAPI and endpoint tweaks for conformance test
