# bbox-server/src/service.rs
@@ -1,6 +1,5 @@
 use actix_web::web;
 use async_trait::async_trait;
-use bbox_common::ogcapi::ApiLink;
 use bbox_common::service::{CoreService, OgcApiService};
 
 #[derive(Clone)]
@@ -10,16 +9,6 @@ pub struct BboxService;
 impl OgcApiService for BboxService {
     async fn from_config() -> Self {
         BboxService {}
-    }
-    fn landing_page_links(&self, _api_base: &str) -> Vec<ApiLink> {
-        vec![ApiLink {
-            href: "/collections".to_string(),
-            rel: Some("data".to_string()),
-            type_: Some("application/json".to_string()),
-            title: Some("Information about the feature collections".to_string()),
-            hreflang: None,
-            length: None,
-        }]
     }
     fn register_endpoints(&self, cfg: &mut web::ServiceConfig, core: &CoreService) {
         self.register(cfg, core)
